[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-redmine"
authors = [
    {name = "Basri", email = "h@basri.me"},
]
license = {text = "Apache License 2.0"}
description = "A Redmine Apache Airflow provider package"
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = ["version"]
requires-python = "~=3.8"
dependencies = ["apache-airflow>=2.4", "python-redmine>=2.4"]

[project.urls]
Homepage = "https://github.com/hbasria/airflow-provider-redmine/"
Source = "https://github.com/hbasria/airflow-provider-redmine/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "redmine_provider.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "redmine_provider.__version__"}

[tool.setuptools.packages.find]
exclude = ["*tests.*", "*tests"]
